# voctomix

./: .gitignore  flake.nix  package.nix  pyproject.toml
.github/workflows/: build-nix.yml
vocto/: debug.py
