[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vocto", "voctocore", "voctogui"]

[project]
name = "voctomix"
version = "0.1.0"
description = "Full-HD Software Live-Video-Mixer in python"
authors = [{name = "c3voc", email = "voc@c3voc.de"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"

[project.scripts]
voctocore = "voctocore.voctocore:main"
voctogui = "voctogui.voctogui:main"
